fix(nitrite): address PR review — multi-datasource support, update semantics, and mapper correctness
Review-requested:
- Support named datasources under micronaut.nitrite.<name>, with per-configuration
  repository operations, an implicit default in-memory datasource, and @NitriteRepository
  bound to a named datasource; database bean resolution is now qualified per
  datasource, fixing "Multiple possible bean candidates found: [Nitrite, Nitrite]"
  once a second datasource was configured.
- Detect optimistic locking from entity version metadata/query bindings instead of
  method-name text; reject updates with a null identity instead of upserting a
  transient entity.
- Execute max/min/sum/avg criteria selections instead of treating any numeric
  result as a count; resolve criteria update fields to persisted names with
  distinct parameter indexes per bound assignment.
- Fail startup when the RocksDB adapter or a present-but-uninitializable spatial
  module is missing, instead of silently falling back or logging a warning.

Bugs surfaced fixing the above:
- Nitrite has no arithmetic update operator: increments/multiplies are
  read-modify-write per document, and were unsynchronized — concurrent updates
  lost writes (8 threads x 50 increments landed on 150/400). Now serialized per
  collection via CollectionUpdateLock; overflow raises DataAccessException
  instead of a raw ArithmeticException.
- Dotted property paths only resolved their last segment, so nested @MappedProperty
  paths addressed a field absent from the stored document — broke criteria
  updates and nested sort ordering alike.
- Read-only (constructor-only) properties were dropped from writable metadata,
  so immutable entities (Kotlin non-null constructor params) persisted nothing
  but their identity; required constructor associations deferred to null and
  broke constructors that reject null.
- SQL-shaped generated queries mis-split literal AND inside quoted strings and
  silently dropped unbound as